improve error handling in CreateWay and update SearchTool description to English